fix: add in authentication for protected routes
